# KoZy

./: Cargo.toml  LICENSE
src/: application.rs  color.rs  components.rs  main.rs  window.rs
src/core/: application.rs  mod.rs  shader.wgsl
src/structure/: components.rs  mod.rs  window.rs
