[package]
name = "kozy_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
vulkano-win = "0.34.0"
winit = "0.29"
raw-window-handle = "0.6" 

#Just add dependencies till stuff works ig
