[package]
name = "kozy_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34"
vulkano-macros = "0.34"
vulkano-shaders = "0.34"
vulkano-util = "0.34"
vulkano-win = "0.34"
winit = "0.29"
raw-window-handle = "0.6" 

#Just add dependencies till stuff works ig
ash = "0.37.3"
bytemuck = "1.9"
core-graphics-types = "0.1"
crossbeam-queue = "0.3"
half = "2.0"
heck = "0.4"
indexmap = "2.0"
libloading = "0.8"
objc = "0.2.5"
once_cell = "1.17"
parking_lot = "0.12"
proc-macro2 = "1.0"
proc-macro-crate = "2.0"
quote = "1.0"
regex = "1.8"
serde = "1.0"
serde_json = "1.0"
shaderc = "0.8"
smallvec = "1.8"
syn = "2.0"
thread_local = "1.1"
vk-parse = "0.12"
winit = "0.29"

# Only used in examples
cgmath = "0.18"
png = "0.17"
rand = "0.8"
ron = "0.8"
